kubernetes/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  revisionHistoryLimit: 12
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "gitlab.praktikum-services.ru:5050/std-025-75/sausage-store/sausage-frontend:latest"
          ports:
            - name: frontend
              containerPort: 8080
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: nginx-conf
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: default.conf
      imagePullSecrets:
        - name: docker-config-secret
