kubernetes/frontend/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
spec:
  containers:
    - name: frontend
      image: "gitlab.praktikum-services.ru:5050/std-025-75/sausage-store/sausage-frontend:latest"
      volumeMounts:
        - mountPath: /etc/nginx/conf.d/
          name: nginx-conf
          readOnly: true
      ports:
        - containerPort: 80
  volumes:
    - name: nginx-conf
      configMap:
        name: nginx-conf
        items:
          - key: nginx.conf
            path: default.conf
  imagePullSecrets:
    - name: docker-config-secret
